@@ -4,7 +4,7 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Mod
-mod_version=2.9.1
+mod_version=2.9.2
 mod_group=com.robertx22
 mod_id=mmorpg
 mod_name=Mine and Slash
